test/classes/deinitializers/deinitAndDestruct.good
deinitAndDestruct.chpl:11: error: ambiguous call 'C.chpl__deinit()'
deinitAndDestruct.chpl:2: note: candidates are: C.~C()
deinitAndDestruct.chpl:6: note:                 C.deinit()
